fix desktop nav signup cursor not showing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -149,6 +149,10 @@ button {
     text-transform: uppercase;
 }
 
+.nav-signup-cursor {
+    cursor: pointer;
+}
+
 /* ================================================
 
 >>FOOTER
